modified comments, fixed unfollow user in bans, delete images from folders on delete, adjusted openAPI
